--- a/POE Part 1/nbproject/private/private.properties
+++ b/POE Part 1/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\David\\AppData\\Roaming\\NetBeans\\13\\build.properties
+user.properties.file=/Users/davidmellors/Library/Application Support/NetBeans/13/build.properties
